Simplify Code by K10 Change Kefjs to 0.7.2-K10

--- a/html/EventHandling3.html
+++ b/html/EventHandling3.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
 </head>
 <body>
-<script src="../out/production/classes/lib/ef.min.js"></script>
-<script src="../out/production/classes/lib/kotlin.js"></script>
-<script src="../out/production/classes/lib/kefjs.js"></script>
-<script src="../out/production/classes/keftest_main.js"></script>
+<script src="../build/classes/kotlin/main/lib/ef.min.js"></script>
+<script src="../build/classes/kotlin/main/lib/kotlin.js"></script>
+<script src="../build/classes/kotlin/main/lib/kefjs.js"></script>
+<script src="../build/classes/kotlin/main/keftest.js"></script>
 <script>
-    (new keftest_main.EventHandling3).main()
+    (new keftest.EventHandling3).main()
 </script>
 </body>
 </html>
