--- a/html/BasicBinding.html
+++ b/html/BasicBinding.html
@@ -2,15 +2,15 @@
 <head>
     <meta charset="UTF-8">
     <title>Basic Binding</title>
-    <link rel="stylesheet" href="../out/production/resources/BasicBinding.css">
+    <link rel="stylesheet" href="../build/resources/main/BasicBinding.css">
 </head>
 <body>
-<script src="../out/production/classes/lib/ef.min.js"></script>
-<script src="../out/production/classes/lib/kotlin.js"></script>
-<script src="../out/production/classes/lib/kefjs.js"></script>
-<script src="../out/production/classes/keftest_main.js"></script>
+<script src="../build/classes/kotlin/main/lib/ef.min.js"></script>
+<script src="../build/classes/kotlin/main/lib/kotlin.js"></script>
+<script src="../build/classes/kotlin/main/lib/kefjs.js"></script>
+<script src="../build/classes/kotlin/main/keftest.js"></script>
 <script>
-    (new keftest_main.BasicBinding).main()
+    (new keftest.BasicBinding).main()
 </script>
 </body>
 </html>
