--- a/html/Bundled_Rendering.html
+++ b/html/Bundled_Rendering.html
@@ -2,15 +2,15 @@
 <head>
     <title>Bundled Rendering</title>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="../out/production/resources/Bundled_Rendering.css">
+    <link rel="stylesheet" href="../build/resources/main/Bundled_Rendering.css">
 </head>
 <body>
-<script src="../out/production/classes/lib/ef.min.js"></script>
-<script src="../out/production/classes/lib/kotlin.js"></script>
-<script src="../out/production/classes/lib/kefjs.js"></script>
-<script src="../out/production/classes/keftest_main.js"></script>
+<script src="../build/classes/kotlin/main/lib/ef.min.js"></script>
+<script src="../build/classes/kotlin/main/lib/kotlin.js"></script>
+<script src="../build/classes/kotlin/main/lib/kefjs.js"></script>
+<script src="../build/classes/kotlin/main/keftest.js"></script>
 <script>
-    (new keftest_main.Bundled_Rendering).main()
+    (new keftest.Bundled_Rendering).main()
 </script>
 </body>
 </html>
