--- a/html/TwoWayBinding.html
+++ b/html/TwoWayBinding.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
 </head>
 <body>
-<script src="../out/production/classes/lib/ef.min.js"></script>
-<script src="../out/production/classes/lib/kotlin.js"></script>
-<script src="../out/production/classes/lib/kefjs.js"></script>
-<script src="../out/production/classes/keftest_main.js"></script>
+<script src="../build/classes/kotlin/main/lib/ef.min.js"></script>
+<script src="../build/classes/kotlin/main/lib/kotlin.js"></script>
+<script src="../build/classes/kotlin/main/lib/kefjs.js"></script>
+<script src="../build/classes/kotlin/main/keftest.js"></script>
 <script>
-    (new keftest_main.TwoWayBinding).main()
+    (new keftest.TwoWayBinding).main()
 </script>
 </body>
 </html>
